--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,26 @@
 spring.application.name=ecowatt
+
+# BASIC SPRING CONFIGURATION
+spring.datasource.url=jdbc:oracle:thin:@host:port:DB
+spring.datasource.username=your-username
+spring.datasource.password=your-password
+
+# ORACLE DB CONFIGURATION
+spring.flyway.baselineOnMigrate=true
+
+# SQL LOGGING
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.flywaydb=DEBUG
+
+# SPRING SECURITY (DEV)
+spring.security.user.name=your-user
+spring.security.user.password=your-password
+
+# DEV ERROR CONFIG
+server.error.include-message=always
+server.error.include-stacktrace=always
+server.error.include-binding-errors=always
+
+# JWT KEY (development fallback)
+my.secret.key=${JWT.SECRET:your-secret}
