docs: update application.properties with credential placeholder and comment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+# ================================================
+# ??  Replace the values below with your own credentials before running the project.
+# ================================================
+
 spring.application.name=ecowatt
 
 # BASIC SPRING CONFIGURATION
@@ -21,6 +25,3 @@ spring.security.user.password=your-password
 server.error.include-message=always
 server.error.include-stacktrace=always
 server.error.include-binding-errors=always
-
-# JWT KEY (development fallback)
-my.secret.key=${JWT.SECRET:your-secret}
